--- a/multi_variate.ipynb
+++ b/multi_variate.ipynb
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Even though RMSE for 5th order polynomial is greated doest mean that it will perform well for test data\n",
+    "#Even though RMSE for 5th order polynomial is least, doest mean that it will perform well for test data\n",
     "#Because the graph shows that it is overfitting the training data rather than generalization "
    ]
   },
